implement modular Jasper report generation tools and expand DGM dashboard data access layer